# nepomukannotation

./: CMakeLists.txt  ChangeLog  NepomukAnnotationConfig.cmake.in  NepomukAnnotationConfigVersion.cmake.in
contextplasmoid/: CMakeLists.txt  Messages.sh  configwidget.cpp  configwidget.h  configwidget.ui  nepomukcontextchooser.cpp  nepomukcontextchooser.h  plasma-applet-nepomukcontextchooser.desktop
contextservice/: CMakeLists.txt  nepomukusercontextservice.cpp  nepomukusercontextservice.desktop  nepomukusercontextservice.h  org.kde.nepomuk.UserContextService.xml
fileitemplugin/: CMakeLists.txt  Messages.sh  nepomukfileitemplugin.cpp  nepomukfileitemplugin.desktop  nepomukfileitemplugin.h
konqueror/: CMakeLists.txt  Messages.sh  nepomukmenuplugin.cpp  nepomukmenuplugin.desktop  nepomukmenuplugin.h  newresourcedialog.cpp  resourcelinkdialog.cpp  resourcelinkdialog.h
lib/: CMakeLists.txt  Doxyfile.cmake  Messages.sh  annotation.cpp  annotation.h  annotation_p.h  annotationplugin.cpp  annotationplugin.h  annotationpluginfactory.cpp  annotationpluginfactory.h  annotationpluginwrapper.cpp  annotationpluginwrapper.h  annotationrequest.cpp  annotationrequest.h  annotationrequest_p.h  dbusconnectionpool.h  nepomuk-annotationplugin.desktop  nepomukannotation_export.h  nepomukannotation_version.cpp  nepomukannotation_version.h.cmake  nepomukcontext.cpp  nepomukcontext.h  nepomukresourceactionplugin.desktop  resourceactionplugin.cpp  resourceactionplugin.h  simpleannotation.cpp  simpleannotation.h  simplepimoannotation.cpp  simplepimoannotation.h  stackedpimotextannotation.cpp  stackedpimotextannotation.h  stackedtextannotation.cpp  stackedtextannotation.h  tagannotation.cpp  tagannotation.h  textannotation.cpp  textannotation.h
lib/gui/: annotationdelegate.cpp  annotationdelegate.h  annotationdisplay.cpp  annotationdisplay.h  annotationdisplaybrowser.cpp  annotationdisplaybrowser.h  annotationmenu.cpp  annotationmenu.h  annotationmodel.cpp  annotationmodel.h  annotationmodel_p.h  annotationrelevancefiltermodel.cpp  annotationrelevancefiltermodel.h  annotationwidget.cpp  annotationwidget.h  labeleditwidget.cpp  labeleditwidget.h  relationitemdelegate.cpp  relationitemdelegate.h  relationmodel.cpp  relationmodel.h  relationmodel_p.h  relationview.cpp  relationview.h  relationview_p.h  resourceannotationmodel.cpp  resourceannotationmodel.h  resourceeditor.cpp  resourceeditor.h  resourceeditor.ui  resourceeditorannotationwidget.cpp  resourceeditorannotationwidget_p.h  resourcerelationview.cpp  resourcerelationview.h  thingitemdelegate.cpp  thingitemdelegate.h  thingmodel.cpp  thingmodel.h  thingmodel_p.h  thingview.cpp  (+1 more)
plugins/: CMakeLists.txt  files.cpp  files.desktop  files.h  imageregion.cpp  imageregion.desktop  imageregion.h  nco.cpp  nco.desktop  nco.h  project.cpp  project.desktop  project.h
plugins/common/: pimoplugintools.cpp  pimoplugintools.h
plugins/context/: CMakeLists.txt  contextannotationplugin.cpp  contextannotationplugin.desktop  contextannotationplugin.h
plugins/dbpedia/: CMakeLists.txt  dbpediaannotationplugin.cpp  dbpediaannotationplugin.desktop  dbpediaannotationplugin.h
plugins/geonames/: CMakeLists.txt  Messages.sh  geonamesannotationplugin.cpp  geonamesannotationplugin.desktop  geonamesannotationplugin.h  graphretriever.cpp  graphretriever.h
plugins/pimo/: CMakeLists.txt  Messages.sh  pimoannotationplugin.cpp  pimoannotationplugin.desktop  pimoannotationplugin.h
plugins/pimotype/: CMakeLists.txt  Messages.sh  pimotypeannotation.cpp  pimotypeannotation.h  pimotypeannotationplugin.cpp  pimotypeannotationplugin.desktop  pimotypeannotationplugin.h
plugins/propertycreation/: CMakeLists.txt  Messages.sh  propertycreationannotationplugin.desktop  propertycreationplugin.cpp  propertycreationplugin.h
plugins/scribo/: CMakeLists.txt  eventannotation.cpp  eventannotation.h  nepomuk_scriboannotationplugin.desktop  occurrenceannotation.cpp  occurrenceannotation.h  scriboannotationplugin.cpp  scriboannotationplugin.h
plugins/tags/: CMakeLists.txt  nepomuk_tagsannotationplugin.desktop  tags.cpp  tags.h
plugins/webpage/: CMakeLists.txt  Messages.sh  nepomuk_webpageannotationplugin.desktop  webpage.cpp  webpage.h
resourceeditor/: CMakeLists.txt  main.cpp  resourceeditor.desktop
simpleannotator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  nepomuksimpleannotator.desktop  resourceannotater.cpp
test/: CMakeLists.txt  annotationmenutester.cpp  statementeditortest.cpp
textannotator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  nepomuktextannotator-app.desktop  resourceannotater.cpp  textannotationwidget.cpp  textannotationwidget.h
